--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,7 @@ repositories {
 dependencies {
     implementation 'user.java.lang:user.java.lang:2020.164.33984'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.3'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
-    // от ошибки Failed to load class "org.slf4j.impl.StaticLoggerBinder":
-    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
+    testImplementation 'com.codeborne:selenide:6.17.2'
 }
 
 
